Fixed bug where mim actions were not aligning properly in details mode. Explicitly set left align on the parent div

--- a/Mimry/Content/Site.css
+++ b/Mimry/Content/Site.css
@@ -97,6 +97,7 @@ button.ml-liked {
 }
 
 .ml-pin {
+    text-align:left;
     position:absolute;
     right:5px;
     top:5px;
